# git-build-info

./: CMakeLists.txt  README.md
cmake/: GitBuildInfo.cmake
examples/: CMakeLists.txt  print_build_info.cc
